--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -461,4 +461,8 @@
 
     <!-- True if the firmware supports Wi-Fi link probing -->
     <bool name="config_wifi_link_probing_supported">true</bool>
+
+    <!-- Android SQLite System -->
+    <string name="db_wal_sync_mode">OFF</string>
+    <string name="db_default_sync_mode">OFF</string>
 </resources>
